--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3892,12 +3892,42 @@ select {
 
 #delete_btn {
   height: 44px;
-  margin-left: 10px;
+  background-color: rgb(20, 50, 120, 0.8);
+  border-color: rgb(64, 64, 184);
+  color: #ffffff;
+}
+#delete_btn2 {
+  height: 44px;
+  margin-left: 30px;
   background-color: rgb(20, 50, 120, 0.8);
   border-color: rgb(64, 64, 184);
   color: #ffffff;
 }
 
+
 #delete_btn:hover {
+  background-color: rgba(85, 136, 255, 0.8);
+}
+
+.idpwSearch-form {
+  margin: 100px auto 0;
+  float: none;
+}
+
+.idpwSearch-form form {
+  border-radius: 8px;
+  padding: 30px ;
+  box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.15);
+}
+
+.idpw-btn {
+  height: 44px;
+  margin-left: 0px;
+  background-color: rgb(20, 50, 120, 0.8);
+  border-color: rgb(64, 64, 184);
+  color: #ffffff;
+}
+
+.idpw-btn:hover {
   background-color: rgba(85, 136, 255, 0.8);
 }
