09/10 수정 (조성진)

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3886,6 +3886,11 @@ select {
 .mypagebox {
   border-bottom: 2px solid #ededed;
 }
+
+#mypagebox {
+  border-bottom: 2px solid #ededed;
+}
+
 #mypage_unregister {
   margin-left: 0px;
 }
